adding price update endpoint
