# src/controllers/tracker.controller.ts
@@ -2,11 +2,14 @@
 import httpStatus from "http-status";
 import {Request, Response} from "express";
 
-import fixStringNumber from "../utils/fixStringNumber";
-import {MARKETS, PRODUCT_PROPS} from "../constants";
+import {MARKETS, PRODUCT_PROPS, LINK_REGEXP} from "../constants";
 import ApiError from "../utils/ApiError";
 import catchAsync from "../utils/catchAsync";
-import {initProductTrack, getProductTrackedPrices} from "../services/trackProducts";
+import {
+  initProductTrack,
+  getProductTrackedPrices,
+  updateProductPriceHistory,
+} from "../services/trackProducts";
 
 export const trackProduct = catchAsync(async (req: Request, res: Response) => {
   const {product} = req.body;
@@ -27,19 +30,32 @@ export const trackProduct = catchAsync(async (req: Request, res: Response) => {
 });
 
 export const getTrackedProduct = catchAsync(async (req: Request, res: Response) => {
-  const {link, price} = req.query;
+  const {link} = req.query;
 
-  if (typeof price !== "string" || isNaN(parseInt(price)))
-    throw new ApiError(httpStatus.BAD_REQUEST, "Invalid price");
   if (typeof link !== "string")
     throw new ApiError(httpStatus.BAD_REQUEST, "The product link wast not provided");
 
-  const isValidUrl = link.match(
-    /(http(s)?:\/\/.)?(www\.)?[-a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)/g,
-  );
+  const isValidUrl = link.match(LINK_REGEXP);
 
   if (!isValidUrl) throw new ApiError(httpStatus.BAD_REQUEST, "Invalid link");
-  const results = await getProductTrackedPrices(link, fixStringNumber(price));
+  const results = await getProductTrackedPrices(link);
+
+  if (!results)
+    throw new ApiError(httpStatus.NOT_FOUND, "No product with the provided link was found");
+  res.send(results);
+});
+export const updateProductPrice = catchAsync(async (req: Request, res: Response) => {
+  const {price}: {price?: number} = req.body;
+  const {link}: {link?: string} = req.query;
+
+  if (typeof link !== "string")
+    throw new ApiError(httpStatus.BAD_REQUEST, "The product link wast not provided");
+
+  const isValidUrl = link.match(LINK_REGEXP);
+
+  if (!isValidUrl) throw new ApiError(httpStatus.BAD_REQUEST, "Invalid link");
+
+  const results = await updateProductPriceHistory(link, price ? (price as number) : undefined);
 
   if (!results)
     throw new ApiError(httpStatus.NOT_FOUND, "No product with the provided link was found");
